# building-a-personal-portfolio-with-django

./: README.md  pyproject.toml  requirements.txt  snippets.txt
.devcontainer/: devcontainer.json
jobs/: views.py
jobs/migrations/: 0001_initial.py
jobs/templates/jobs/: detail.html  home.html
portfolio/: settings.py  urls.py
